--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Green Nine</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div>
+        <h1>My first blog</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore labore nobis error quae assumenda. Qui suscipit iure asperiores vitae ipsa!</p>
+    </div>
 
+</body>
+</html>
