--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="blog1">
         <h1>My first blog</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore labore nobis error quae assumenda. Qui suscipit iure asperiores vitae ipsa!</p>
+    </div>
+    <div class="blog2">
+        <h1>My second blog</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore labore nobis error quae assumenda. Qui suscipit iure asperiores vitae ipsa!</p>
+    </div>
+    <div class="blog3">
+        <h1>My thired blog</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore labore nobis error quae assumenda. Qui suscipit iure asperiores vitae ipsa!</p>
     </div>
 
